<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddGoalActivity">
    <androidx.appcompat.widget.Toolbar
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tb_add_toolbar"
        style="@style/toolbarStyle"
        app:menu="@menu/toolbar_home_menu"
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/activity_add_goal_title"
            style="@style/appBarText"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/tb_add_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                style="@style/smallTitleText"
                android:text="@string/title_goal"
                />

            <EditText
                android:id="@+id/et_add_goal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_goal_input_title"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/tv_add_goal_content"
                style="@style/smallTitleText"
                android:text="@string/add_goal_title_content" />

            <EditText
                android:id="@+id/et_add_goal_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="200dp"
                android:hint="@string/add_goal_input_content"
                />

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/add_goal_start_time"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_add_goal_start_time"
                    style="@style/smallBtnText"/>

                <TextView
                    android:layout_alignParentEnd="true"
                    android:text="@string/add_goal_end_time"
                    android:layout_width="wrap_content"
                    android:id="@+id/tv_add_goal_end_time"
                    style="@style/smallBtnText"/>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:id="@+id/btn_add_goal"
                android:text="@string/save"
                style="@style/normalBtn"/>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>